# career-agent

./: .gitignore  CLAUDE.md  GAP_ANALYSIS_REPORT.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  api.env  async_nodes.py  claude_desktop_config.json  diagram.excalidraw  flow.py  flow_job_discovery.py  main.py  mcp_server.py  nodes.py  nodes_job_discovery.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
backlog/: TASK_STATUS_SUMMARY.md  config.yml
careeragent/: parse_cv.ipynb
config/: __init__.py  database_config.py
docs/: ai_browser_integration.md  ai_browser_tools_evaluation.md  api_reference.md  career_database_schema.md  design.md  developer_guide.md  job_discovery_guide.md  job_requirements_schema.md  llm_caching.md  mcp_integration_guide.md  mcp_sampling_research.md  narrative_strategy_integration.md  openrouter_setup.md  parallel_llm_processing.md  progress_summary.md  shared_store_data_contract.md  sqlite_backend.md  system_workflow.md  testing_strategy.md  troubleshooting.md  web_framework_evaluation.md
examples/: company_research_example.yaml  simple_flow_demo.py
prompts/: prompt_variations.yaml  suitability_assessment_prompt.md
schemas/: company_research_schema.yaml
templates/: README.md  ats_compatibility_guide.md  cover_letter_5part_structure.md  cover_letter_template.txt  cv_template.md  education_certification_template.md  experience_entry_template.md  formatting_guidelines.md  skills_section_template.md
tests/: __init__.py  benchmark_parallel_llm.py  test_adaptive_llm_wrapper.py  test_analysis_flow.py  (+41 more)
(+125 files in other folders)
