[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-agent"
version = "0.1.0"
description = "Intelligent job application customization system using PocketFlow"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Career Agent Contributors"},
]
dependencies = [
    "PyYAML>=6.0.1",
    "jsonschema>=4.20.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
performance = [
    "uvloop>=0.19.0 ; platform_system != 'Windows'",
]

[project.scripts]
career-agent = "main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]